# coil-winder

./: CMakeLists.txt  README.md  buttons.c  buttons.cpp  buttons.h  cursor.cpp  cursor.h  display.cpp  display.h  font.c  font.h  main.c  main.cpp  menu.cpp  menu.h  program.cpp  program.h  quadrature.cpp  quadrature.h  quadrature_encoder.pio  ssd1315.c  ssd1315.h
